@@ -97,6 +97,9 @@ The support information is provided via a simple HTML file. Example:
 \*(T<\fB\-\-background=<svg-file>\fR\*(T>
 Use a custom/branded background image (SVG format) for X2Go Client's main window (i.e. replace the blue gradient area
 in X2Go Client by some background of your own (business/workgroup/project).
+.TP
+\*(T<\fB\-\-branding=<svg-file>\fR\*(T>
+Use a custom icon (SVG format) for additional branding to replace the default in the lower left corner of X2Go Client's main window.
 
 .SH SESSION PROFILE DEFAULTS
 You can set certain defaults for session profiles via command line switches using the following options:
